TEST_PROGRAMS/INVALID/04/8.go
package main

func main() {
    //Empty rune
    var x = ''
    x++ // "use" x
}
